[package]
name = "opendht"
description = "Rust bindings for OpenDHT (https://opendht.net)"
version = "0.1.0"
authors = ["Sébastien Blin <sebastien.blin@savoirfairelinux.com>"]
edition = "2018"
license = "gplv3"
repository = "https://github.com/savoirfairelinux/opendht/tree/master/rust"

[dependencies]
libc="0.2.0"
os_socketaddr="0.1.0"